--- a/README.Rmd
+++ b/README.Rmd
@@ -31,13 +31,23 @@ You can install the development version of hcup from [GitHub](https://github.com
 devtools::install_github("HunterRatliff1/hcup")
 ```
 
-## Example
+## Classify ICD-10 codes to CCSR categories
 
-This is a basic example which shows you how to solve a common problem:
+The simple case is for procedures, as each procedure has one CCSR category
 
-```{r example}
+```{r CCSR-procedures}
 library(hcup)
-## basic example code
+classify_ccsr_pr("0016070")
+
+icd_10_pr <- c("04L04DZ", "009Y40Z", "0F7C7DZ", "GZ2ZZZZ")
+classify_ccsr_pr(icd_10_pr)
+
+# Vectorized using `mutate()`
+library(dplyr)
+
+dplyr::tibble(icd_10 = icd_10_pr) %>%
+  mutate(CCSR = classify_ccsr_pr(icd_10),
+         explained = explain_ccsr(CCSR))
 ```
 
-...
+CCSR diagnosis codes...
