--- a/README.Rmd
+++ b/README.Rmd
@@ -89,7 +89,7 @@ classify_ccsr_pr("0016070")
 ```
 
 Again, this can be vectorized for use within data frames. The helper function `explain_ccsr` can
-convert these categories into human-readable labels
+convert these categories into human-readable labels.
 
 ```{r}
 library(dplyr)
