--- a/vignettes/articles/procedures.Rmd
+++ b/vignettes/articles/procedures.Rmd
@@ -1,51 +1,25 @@
 ---
-output: github_document
+title: "Procedures with ICD-10-PCS"
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  comment = "#>"
 )
 ```
 
-# hcup- Implementation of HCUP Software Tools in R
-
-<!-- badges: start -->
-<!-- badges: end -->
-
-Adapts the software provided by the [Healthcare Cost and Utilization Project (HCUP)](https://www.hcup-us.ahrq.gov/tools_software.jsp) 
-for analyses of administrative database using International Classification of Diseases 
-(ICD) codes within the R statistical environment.
-
-## Installation
-
-```{r setup, include=FALSE}
-# Hide the warning messages 
+```{r setup, include = FALSE}
 library(hcup)
 library(dplyr)
 library(purrr)
 ```
 
-
-You can install the development version of hcup from [GitHub](https://github.com/) with:
-
-``` r
-# install.packages("devtools")
-devtools::install_github("HunterRatliff1/hcup")
-```
-
-## Procedures with ICD-10
-
 Although I'm not a fan of procedures myself (clinical practice), I am aficionado of ICD-10
 procedure codes (ICD-10-PCS). Compared to their predecessor (ICD-9), ICD-10-PCS is much more
-eloquent and specific, so it's only appropriate that we start there!
+eloquent and specific, so it's actually pleasant to work with!
 
-### Procedure classification
+# Procedure classification
 
 The most straightforward of the HCUP software tools included in this package are the 
 [Procedure Classes](https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp).
@@ -76,7 +50,7 @@ works the same for ICD-9 procedure codes.
 classify_pr("0015") # Infusion of IL-2
 ```
 
-### CCSR for ICD-10-PCS Procedures
+# CCSR for ICD-10-PCS Procedures
 
 Much more powerful is the [Clinical Classifications Software Refined (CCSR)](https://www.hcup-us.ahrq.gov/toolssoftware/ccsr/prccsr.jsp) categories, which 
 aggregates the expansive number of ICD-10-PCS procedure codes into a smaller number of 
@@ -90,7 +64,7 @@ classify_ccsr_pr("0016070")
 ```
 
 Again, this can be vectorized for use within data frames. The helper function `explain_ccsr` can
-convert these categories into human-readable labels:
+convert these categories into human-readable labels.
 
 ```{r}
 library(dplyr)
@@ -112,5 +86,16 @@ tibble(CCSR_PR = c("URN001", "RES010", "CAR004")) %>%
   mutate(Explained = explain_ccsr(CCSR_PR),
          details   = explain_ccsr(CCSR_PR, detailed = TRUE),
          domain    = map_chr(details, "clinical_domain"))
+```
+
+# Bringing it together
+
+```{r}
+icd_pr_codes <- c("0PS443Z", "3E05305", "F13ZHZZ", "04L04DZ", "009Y40Z", "0F7C7DZ", "GZ2ZZZZ")
+
+tibble(icd_pr10 = icd_pr_codes) %>%
+  mutate(CCSR      = classify_ccsr_pr(icd_pr_codes),
+         PR_cls    = classify_pr(icd_pr_codes),
+         explained = explain_ccsr(CCSR))
 ```
 
