--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,7 @@ for analyses of administrative database using International Classification of Di
 library(hcup)
 library(dplyr)
 library(purrr)
+library(tidyr)
 ```
 
 
@@ -39,78 +40,115 @@ You can install the development version of hcup from [GitHub](https://github.com
 devtools::install_github("HunterRatliff1/hcup")
 ```
 
-## Procedures with ICD-10
+## Classify diagnosis codes by chronicity (CCI)
 
-Although I'm not a fan of procedures myself (clinical practice), I am aficionado of ICD-10
-procedure codes (ICD-10-PCS). Compared to their predecessor (ICD-9), ICD-10-PCS is much more
-eloquent and specific, so it's only appropriate that we start there!
-
-### Procedure classification
-
-The most straightforward of the HCUP software tools included in this package are the 
-[Procedure Classes](https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp).
-Procedure classes identify procedures as [1] diagnostic or therapeutic and [2] whether they major 
-(expected to be performed in an operating room) or minor.
+This works for ICD-9 or ICD-10 diagnosis codes, although the categories differ across ICD versions
 
 ```{r}
 library(hcup)
+classify_chronic(icd_dx = "G4730", icd_version = 10)
+classify_chronic(icd_dx = "56081", icd_version = 9)
+
+
+# Vectorized version
+icd_codes <- c("G4730", "L563", "M25151")
+classify_chronic(icd_codes, icd_version = 10)
+```
+
+## Classify procedures by class
+
+Identifies procedures by [Procedure Classes](https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp), which can be [1] diagnostic or therapeutic and [2] whether they major 
+(expected to be performed in an operating room) or minor. This works with both ICD-9-CM procedure codes and ICD-10-PCS procedure codes.
+
+```{r}
 classify_pr("0PS443Z") # Spine surgery
 classify_pr("009U3ZX") # Lumbar puncture
+classify_pr("0015")    # Infusion of IL-2
 ```
 
-This function can be vectorized (e.g. using `dplyr::mutate`) as shown below:
+## Classify ICD-9 into CCS
+
+This function categorizes ICD codes for both diagnoses and procedures into mutually exclusive 
+[Clinical Classifications Software (CCS) categories](https://www.hcup-us.ahrq.gov/toolssoftware/ccs/ccs.jsp).
+This was designed for use with ICD-9 codes, but the HCUP used to provide a [beta version](https://www.hcup-us.ahrq.gov/toolssoftware/ccsr/ccsr_archive.jsp) that works with ICD-10
 
 ```{r}
-# Using the dplyr workflow
 library(dplyr)
-tibble(
-  Patients = c("A",       "B",       "C"),
-  ICD_10   = c("0PS443Z", "3E05305", "F13ZHZZ")) %>%
-  mutate(pr_class = classify_pr(ICD_10))
+## Look up ICD-9 DX codes
+classify_ccs("8442", code_type = "dx9", level = "single")
+
+# Vectorized
+tibble(ICD = c("8442", "1403", "9682",  "36463", "3595")) %>%
+  mutate(CCS      = classify_ccs(ICD, code_type = "dx9", "single"),
+         CCS_expl = explain_ccs(CCS))
+
+## Works the same for ICD-9 PR codes
+classify_ccs("066", code_type = "pr9")
 ```
 
-Although applications using ICD-9 codes aren't covered here, this function also 
-works the same for ICD-9 procedure codes.
+As mentioned above, `classify_ccs()` will also work with ICD-10 using a beta version that is no longer
+updated, but the CCSR (below) is preferred. However, if you're working with a mix of ICD-9 and ICD-10
+codes, you can use classify_ccs() understanding the limitations
 
-```{r}
-classify_pr("0015") # Infusion of IL-2
+```{r, message=F}
+# Fake patient data
+tibble::tribble(
+  ~patient, ~pr_vers,     ~code,
+       "A",       10, "0TY10Z1",
+       "B",       10, "0RJM4ZZ",
+       "C",       10, "0210088",
+       "D",        9,    "3352",
+       "E",        9,    "3323",
+       "F",        9,    "3639"
+  ) %>%
+  
+  mutate(CCS = case_when(
+    pr_vers==9  ~ classify_ccs(code, code_type = "pr9"),
+    pr_vers==10 ~ classify_ccs(code, code_type = "pr10"))) %>%
+  mutate(expln = explain_ccs(CCS))
 ```
 
-### CCSR for ICD-10-PCS Procedures
+## Classify ICD-10 into CCSR
 
-Much more powerful is the [Clinical Classifications Software Refined (CCSR)](https://www.hcup-us.ahrq.gov/toolssoftware/ccsr/prccsr.jsp) categories, which 
-aggregates the expansive number of ICD-10-PCS procedure codes into a smaller number of 
-clinically meaningful categories.
-
-Similar to the procedure classes (and all functions starting with `classify_`), this categorizes ICD
-codes into mutually exclusive categories. 
+The [Clinical Classifications Software Refined (CCSR) software](https://www.hcup-us.ahrq.gov/toolssoftware/ccsr/ccs_refined.jsp) for ICD-10
+works similar to CCS for procedures, but capitalizes on ICD-10's specificity
 
 ```{r}
 classify_ccsr_pr("0016070")
-```
 
-Again, this can be vectorized for use within data frames. The helper function `explain_ccsr` can
-convert these categories into human-readable labels:
-
-```{r}
 library(dplyr)
 tibble(icd_10 = c("04L04DZ", "009Y40Z", "0F7C7DZ", "GZ2ZZZZ")) %>%
   mutate(CCSR      = classify_ccsr_pr(icd_10),
          explained = explain_ccsr(CCSR))
 ```
 
-You can also use the "detailed" option within `explain_ccsr(ccsr, detailed=TRUE)` to return 
-additional data about the CCSR category. This returns a named list, which can be helpful
-in conjunction with the [purrr package](https://purrr.tidyverse.org/).
+For ICD-10 diagnostic codes, the specificity actually creates a bit of a problem as
+CCSR doesn't categorize diagnoses into mutually exclusive categories (see `vignette("ccsr-dx")`).
 
 ```{r}
-library(purrr)
-# NOTE: The results returned when `detailed = TRUE` depends on the
-#       type of CCSR category. See the `CCSR_PR_categories` or 
-#       `CCSR_DX_categories` in the `hcup.data` package for details
-tibble(CCSR_PR = c("URN001", "RES010", "CAR004")) %>%
-  mutate(Explained = explain_ccsr(CCSR_PR),
-         details   = explain_ccsr(CCSR_PR, detailed = TRUE),
-         domain    = map_chr(details, "clinical_domain"))
+ccsr_dx("I110") # Hypertensive heart disease with heart failure
+ccsr_dx("I110") %>% explain_ccsr()
 ```
+
+This is wonderful in some senses, because it captures more information, but makes it
+difficult to answer some questions (e.g. do admissions for heart failure cost more than
+admissions for hypertension?). To address this, the principal diagnosis can still be 
+categorized into a single CCSR category.
+
+```{r}
+tibble::tribble(
+  ~Pt_id, ~DX_NUM,     ~ICD,
+     "A",  "DX_1",   "I110",
+     "A",  "DX_2", "F17210",
+     "B",  "DX_1",   "I150",
+     "B",  "DX_2",   "Z370",
+     "B",  "DX_3",   "E876"
+  ) %>%
+  
+  # Limit to the principal diagnosis
+  filter(DX_NUM == "DX_1") %>%
+  mutate(prin_CCSR      = classify_ccsr_dx1(ICD, setting="ip"),
+         principal_CCSR = explain_ccsr(prin_CCSR)) 
+```
+
 
