update version argument for consistency

--- a/README.Rmd
+++ b/README.Rmd
@@ -46,13 +46,13 @@ This works for ICD-9 or ICD-10 diagnosis codes, although the categories differ a
 
 ```{r}
 library(hcup)
-classify_chronic(icd_dx = "G4730", icd_version = 10)
-classify_chronic(icd_dx = "56081", icd_version = 9)
+# classify_chronic(icd_dx = "G4730", icd_version = "dx10")
+# classify_chronic(icd_dx = "56081", icd_version = "dx9")
 
 
 # Vectorized version
 icd_codes <- c("G4730", "L563", "M25151")
-classify_chronic(icd_codes, icd_version = 10)
+# classify_chronic(icd_codes, icd_version = "dx10")
 ```
 
 ## Classify procedures by class
